Bug 1447270 - Use GLContextGLX::FindVisual() on GLX enabled builds only, r=jhorak

MozReview-Commit-ID: HB86kRurkDG